--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ Pygments==2.14.0
 Pympler==1.0.1
 pyrsistent==0.19.3
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
 requests==2.28.2
@@ -42,6 +43,7 @@ semver==2.13.0
 six==1.16.0
 smmap==5.0.0
 streamlit==1.20.0
+streamlit-card==0.0.4
 streamlit-lottie==0.0.3
 toml==0.10.2
 toolz==0.12.0
